# myProjectForJenkins

./: .gitrepo  CMakeLists.txt  Jenkinsfile  README.md
.github/: CODEOWNERS
include/: myA.h  myB.h
src/: myA.cpp  myB.cpp
tests/: testMyA.cpp  testMyB.cpp
